# rust-python-codegen-comparison

./: .gitignore  Cargo.toml  README.md  axum_example.py  demo_tui.py  main.py  pyproject.toml  reflect_example.py  reflect_main.py  test-ci.sh  test_apis.py
.github/workflows/: ci.yml
axum-server-client/: README.md  pyproject.toml
axum-server-client/axum_server_client/: __init__.py
axum-server-client/axum_server_client/api/users/: health_get.py  user_create.py  user_get.py  users_list.py
axum-server-client/axum_server_client/models/: __init__.py  account_status.py  api_error.py  create_user_request.py  health_status.py  preferences.py  role.py  theme.py  user.py
reflect-api-demo-client/: pyproject.toml
reflect-api-demo-client/reflect_api_demo_client/: __init__.py  generated.py
reflect_server/: Cargo.toml  reflectapi.json
reflect_server/src/: lib.rs  main.rs  redoc.html
requests/: axum-server.http
shared_models/: Cargo.toml
shared_models/src/: lib.rs
