[project]
name = "reflect-api-demo-client"
version = "0.1.0"
description = "ReflectAPI generated Python client"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "reflectapi-runtime>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reflect_api_demo_client"]
