[package]
name = "reflect_server"
version = "0.1.0"
edition = "2024"

[dependencies]
reflectapi = { path = "/home/brian/dev/reflectapi/reflectapi", features = [
    "builder",
    "axum",
    "codegen",
    "json"
] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.1"
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
