[package]
name = "reflect_server"
version.workspace = true
edition.workspace = true

[dependencies]
reflectapi = { version = "0.15.7", features = [
    "builder",
    "axum",
    "codegen",
    "json",
    "chrono"
] }
tokio.workspace = true
axum = "0.8"  # reflectapi requires axum 0.8
http = "1.2.0"
serde.workspace = true
serde_json.workspace = true
shared_models = { path = "../shared_models", features = ["reflectapi"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
